manifests/istio-injection-nodelete.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: default
    labels:
      istio-injection: enabled
- apiVersion: v1
  kind: Namespace
  metadata:
    name: argocd
    labels:
      istio-injection: enabled
- apiVersion: v1
  kind: Namespace
  metadata:
    name: backstage
    labels:
      istio-injection: enabled
- apiVersion: v1
  kind: Namespace
  metadata:
    name: istio-system
    labels:
      istio-injection: enabled
